--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <script src="eventos.js"></script>
-    <button type="button" onclick="alert('Hola!');">Saludar</button>
+    <div>
+        <button type="button" onclick="alert('Hola!');">Saludar</button>
+    </div>
 </body>
 
 </html>
