--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <script src="eventos.js"></script>
+    <link rel="stylesheet" src="estilos.css">
+</head>
+
+ <body>
     <div>
         <button type="button" onclick="alert('Hola!');">Saludar</button>
     </div>
