--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 </head>
 
  <body>
-    <div>
+    <div id="container">
         <button type="button" onclick="alert('Hola!');">Saludar</button>
     </div>
 </body>
