--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="eventos.js"></script>
-    <link rel="stylesheet" src="estilos.css"/>
+    <link rel="stylesheet" href="estilos.css"/>
 </head>
 
  <body>
