--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <body>
     <div id="container">
-        <button type="button" onclick="alert('Hola!');">Saludar</button>
+        <button type="button";">Saludar</button>
     </div>
 </body>
 
