--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <body>
     <div id="container">
-        <button type="button" onclick="alert('Hola!');">Saludar</button>
+        <button id="btn" type="button" onclick="alert('Hola!');">Saludar</button>
     </div>
     <script src="eventos.js"></script>
 </body>
